[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/hippo/goofy ah boss/пизда/pixil-frame-0 (3).png" type="Texture" id=1]
[ext_resource path="res://scripts/Final_Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/hippo/goofy ah boss/Pixilart Sprite Sheet (12).png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "Defeated",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 0.0

[sub_resource type="Animation" id=4]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.5, 0.5 ), Vector2( -2, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=16]
radius = 14.0
height = 0.0

[node name="Hippocrates" type="KinematicBody2D" groups=["Boss_Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
enemy_health = 30

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 2 )
animation = "Shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Spawn = SubResource( 4 )

[node name="audio_player" type="AudioStreamPlayer2D" parent="."]

[node name="hit_box" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
position = Vector2( -3, -1 )
shape = SubResource( 16 )

[node name="slime_spawn" type="Position2D" parent="."]
